tests/errors/block_return_enclosing_type_mismatch.dang
# return inside a block argument belongs to the enclosing function
bad: String! {
  [1].each { x =>
    return 42
  }
  "ok"
}

pub result = bad
